--- a/Resources/Styles/IconsStyles.xaml
+++ b/Resources/Styles/IconsStyles.xaml
@@ -26,4 +26,12 @@
         <Setter Property="Margin" Value="6,0,6,0"/>
     </Style>
 
+    <Style x:Key="IconViewStyle" TargetType="Image">
+        <Setter Property="Width" Value="12"/>
+        <Setter Property="Height" Value="12"/>
+        <Setter Property="Margin" Value="0,0,6,0"/>
+        <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality"/>
+    </Style>
+
+
 </ResourceDictionary>
