--- a/Resources/Styles/LabelsStyles.xaml
+++ b/Resources/Styles/LabelsStyles.xaml
@@ -1,28 +1,26 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="HeaderLabelStyle" TargetType="TextBlock">
-        <Setter Property="FontFamily" Value="SF Pro Display"/>
+        <Setter Property="FontFamily" Value="{StaticResource SFProBold}"/>
         <Setter Property="FontSize" Value="22"/>
-        <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="Foreground" Value="{StaticResource PrimaryBrush}"/>
     </Style>
     
     <Style x:Key="SubtitleLabelStyle" TargetType="TextBlock">
-        <Setter Property="FontFamily" Value="SF Pro Display"/>
+        <Setter Property="FontFamily" Value="{StaticResource SFProSemiBold}"/>
         <Setter Property="FontSize" Value="16"/>
-        <Setter Property="FontWeight" Value="SemiBold"/>
         <Setter Property="Foreground" Value="{StaticResource PrimaryBrush}"/>
     </Style>
 
     <Style x:Key="RegularLabelStyle" TargetType="TextBlock">
-        <Setter Property="FontFamily" Value="SF Pro Display"/>
+        <Setter Property="FontFamily" Value="{StaticResource SFProRegular}"/>
         <Setter Property="FontSize" Value="12"/>
         <Setter Property="Foreground" Value="{StaticResource PrimaryBrush}"/>
     </Style>
     
     <Style x:Key="DescriptionLabelStyle" TargetType="TextBlock">
-        <Setter Property="FontFamily" Value="SF Pro Display"/>
+        <Setter Property="FontFamily" Value="{StaticResource SFProRegular}"/>
         <Setter Property="FontSize" Value="12"/>
-        <Setter Property="Foreground" Value="#7E7B8D"/>
+        <Setter Property="Foreground" Value="{StaticResource SecondaryBrush}"/>
     </Style>
 </ResourceDictionary>
