--- a/Resources/Styles/TextBoxStyles.xaml
+++ b/Resources/Styles/TextBoxStyles.xaml
@@ -288,8 +288,8 @@
 
     <Style x:Key="SecondarySearchBoxStyle" TargetType="TextBox">
         <Setter Property="Background" Value="{StaticResource SecondaryButtonBrush}"/>
-        <Setter Property="FontFamily" Value="SF Pro Display"/>
-        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="FontFamily" Value="{StaticResource SFProRegular}"/>
+        <Setter Property="FontSize" Value="11"/>
         <Setter Property="Height" Value="28"/>
         <Setter Property="Padding" Value="8,0"/>
         <Setter Property="BorderThickness" Value="1"/>
@@ -303,7 +303,9 @@
                         CornerRadius="10">
                         <Grid>
                             <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                                <Image Source="/Resources/Icons/search-icon.png" Width="14" Height="14" Margin="8,0,0,0" VerticalAlignment="Center"/>
+                                <Image Source="/Resources/Icons/search-icon.png" Width="14" Height="14" Margin="8,0,0,0" 
+                                       VerticalAlignment="Center"
+                                       RenderOptions.BitmapScalingMode="HighQuality"/>
                                 <ScrollViewer x:Name="PART_ContentHost" VerticalAlignment="Center"/>
                             </StackPanel>
                             <!-- Prompt Text -->
